[build-system]
requires = ["setuptools", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "moja-biblioteka"
version = "0.1.0"
description = "Moja biblioteka oparta o pygame"
authors = [
    { name="Twoje Imię", email="twoj@email.com" }
]
readme = "README.md"
requires-python = ">=3.8"
dependencies = [
    "pygame>=2.0.0"
]
